2008-12-08  Ray Strode  <rstrode@redhat.com>

	* gconf/gconfd.c: (logfile_save):
	Use fsync instead of fdatasync for portability
	(bug 563401).
	* backends/markup-tree.c (save_tree_with_locale):
	Also flush and sync here before closing (Patch
	from Richard Hult, bug 562976)

2008-12-02  Ray Strode  <rstrode@redhat.com>

	* gconf/gconfd.c: (logfile_save):
	sync saved state file to disk before closing
	(bug 562976)

2008-10-22  Christian Persch  <chpe@gnome.org>

	* gconf/gconftool-2.c: Add --search-key-regex; bug #557489.

2008-10-22  Christian Persch  <chpe@gnome.org>

	* defaults/gconf-defaults.c: (do_copy),
	(gconf_defaults_unset_mandatory): Fix some 'format not a string
	literal and no format arguments' warnings.

2008-10-22  Christian Persch  <chpe@gnome.org>

	* gconf/gconf-backend.c: (gconf_backend_unref): Fix one 'format not a
	string literal and no format arguments' warning.

2008-09-25  Tor Lillqvist  <tml@novell.com>

	* gconf/dllmain.c (setup): Drop the Win9x code path. There is no
	Win9x support any more lower in the stack anyway.

=========================== 2.24.0 ===========================

2008-09-22  Kjartan Maraas  <kmaraas@gnome.org>

	* NEWS: Updated 
	* configure.in: Release 2.24.0.

2008-08-21  Saleem Abdulrasool  <compnerd@compnerd.org>

	reviewed by: kmaraas

	* configure.in:  Check for polkit-policy-file-validate if
	policykit is neede to allow configure to pass on systems 
	without PolicyKit

=========================== 2.23.2 ==========================

2008-08-19  Kjartan Maraas  <kmaraas@gnome.org>

	* defaults/Makefile.am: Add distclean rule.
	* gconf/gconfd.c: (get_on_system_bus):
	* gconf/gconfd.h: Fix some warnings.

2008-08-19  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Check for polkit-policy-file-validate
	to fix make distcheck.

2008-07-11  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Add noteworthy new features

2008-07-11  Matthias Clasen  <mclasen@redhat.com>

	Bug 531169 – A mechanism for setting defaults
