@@ -1,3 +1,9 @@
+2008-12-30  Matthias Clasen  <mclasen@redhat.com>
+
+	Bug 565297 – a --toggle option for gconftool
+
+	* gconf/gconftool.c: Add --toggle option
+
 2008-12-08  Ray Strode  <rstrode@redhat.com>
 
 	* gconf/gconfd.c: (logfile_save):
